Fix: Do not filter when notify envelope clicked
On the task view, the name-filter link was overlapping
with the notify-owner link. This commit tightens things
up a little bit.

--- a/web/public/css/app.css
+++ b/web/public/css/app.css
@@ -757,7 +757,7 @@
 
   cursor: pointer;
 }
-.backlog-owner:hover {
+.owner-name:hover {
   text-decoration: underline;
 }
 .backlog-owner.after {
